tests/out/error/prefix/not_no_bool.in.bt
x := not true
_ := not 123
y := not x
_ := not mybad
