tests/out/error/prefix/not_no_bool.out
tests/out/error/prefix/not_no_bool.in.bt:2:6 error: cannot use `not` on i32
